fixing spacing for reference figure

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1549,7 +1549,7 @@ div#technical-library {
   margin-right: 15px;
 }
 div.reference-figure {
-  margin-top: -150px;
+  margin-top: -180px;
   float: right;
   margin-right: 15px;
 }
